src/App.css
.main__container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin-bottom: 40px;
  margin-top: 70px;
}

.main__header {
  width: 100%;
  height: 50px;
  background: #383f4c;
  color: #fff;
  overflow-x: auto;
  margin-bottom: 40px;
  overflow-y: hidden;
  white-space: nowrap;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.26);
}

.main__header span {
  width: 40px;
  height: inherit;
  display: inline-block;
  padding: 10px;
  margin-left: 5px;
  margin-right: 5px;
  text-align: center;
  cursor: pointer;
  user-select: none;
  line-height: 30px;
}

.main__header span:active {
  background: #3c4455;
}

.element {
  width: 110px;
  min-height: 100px;
  background: #fff;
  color: #333;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  cursor: pointer;
  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
  user-select: none;
  animation: scaleUp 1s ease-out;
}

.element__symbol {
  font-size: 35px;
}

.element__name {
  font-size: 12px;
}

.modal,
.modal__overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.modal {
  visibility: hidden;
  opacity: 0;
}

.modal.show {
  visibility: visible;
  opacity: 1;
}

.modal__overlay {
  background: rgba(0, 0, 0, 0.5);
  z-index: -1;
}

.modal__container {
  background: #fff;
  width: 300px;
  height: 300px;
  position: absolute;
  left: 0;
  right: 0;
  margin: auto;
  bottom: 0;
  top: 0;
  z-index: 1;
  transform: scale(0.1);
  transition: all 0.3s ease-in;
  box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.29);
}

.modal__container.show {
  transform: scale(1);
}


@keyframes scaleUp {
  0% {
    transform: scale(0);
  }
  20% {
    transform: scale(1);
  }
  100% {
    transform: scale(1);
  }
}

